# docker-ext-dns

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.example.yml  pyproject.toml
.claude/commands/: release.md
src/ext_dns/: config.py  docker_watcher.py  main.py  models.py  reconciler.py
src/ext_dns/providers/: __init__.py  base.py  pihole.py  sophos.py
src/ext_dns/web/: app.py
src/ext_dns/web/static/: index.html
