[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docker-ext-dns"
version = "0.7.0"
description = "DNS record manager for Docker Compose environments"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "docker>=7.0",
    "dnspython>=2.6",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "httpx>=0.27",
    "sophosfirewall-python>=0.1.67",
]

[project.scripts]
docker-ext-dns = "ext_dns.main:main_sync"

[tool.hatch.build.targets.wheel]
packages = ["src/ext_dns"]
